# calcifer

./: .gitignore  README.md  auth.dmgiangi.dev.har  chromewebdata.har  deploy  deploy.conf  keycloak.dmgiangi.dev.har  openclaw.md
.github/workflows/: deploy-portfolio.yml
calcifer-cli/: .gitignore  README.md  calcifer-cli.py  pyproject.toml
calcifer-cli/commands/: ansible.py  bootstrap.py  build.py  clean.py  deploy.py  env.py  init_admin.py  logs.py  push.py  rollback.py  run.py  status.py  sync_env.py  test.py
calcifer-cli/deploy/: _common.sh  push.sh  rollback.sh  run.sh  sync-env.sh  test.sh
calcifer-cli/tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_utils.py
calcifer-cli/utils/: __init__.py  config.py  docker.py  git.py  output.py  ssh.py
core-server/: ADR.md  CUSTOMIZATION.md  DOMAIN.md  OPERATIONS.md  README.md  pom.xml  tasklist.md
forward-auth/: .gitignore  Dockerfile  README.md  authz.go  config.go  go.mod  go.sum  main.go  oidc.go  telemetry.go
infrastructure/: .env.example  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  rabbitmq-users.csv  rabbitmq_definitions.json
infrastructure/ansible/: README.md  ansible.cfg
infrastructure/ansible/inventory/: hosts.yml
infrastructure/ansible/playbooks/: deploy.yml  install-docker.yml  site.yml  snapshot-create.yml  snapshot-list.yml  snapshot-restore.yml  test-connection.yml
infrastructure/cloud/: docker-compose.yaml  openclaw-analysis.md
infrastructure/cloud/alloy/: config.alloy
infrastructure/cloud/group-auth/: Dockerfile  auth-config.yaml  server.py
infrastructure/cloud/homepage/: bookmarks.yaml  docker.yaml  services.yaml  settings.yaml  widgets.yaml
infrastructure/common/: docker-compose.monitoring.yaml
infrastructure/home/: docker-compose.yaml
infrastructure/loki/: loki-config.yaml
infrastructure/prometheus/: prometheus.yml
infrastructure/rabbitmq/: init.sh
infrastructure/tempo/: tempo-config.yaml
iot-device/: .gitignore  README.md  platformio.ini
iot-device/data/: display_config.json  mqtt_config.json  pin_config.json  wifi_config.json
iot-device/data_template/: display_config.template.json  mqtt_config.template.json  pin_config.template.json  wifi_config.template.json
iot-device/src/: main.cpp
scripts/deploy/: build.sh  logs.sh  rollback.sh  run.sh  status.sh  test.sh
utils/: Dockerfile  before-body.tex  build_docs.py  build_docs_docker.sh  docs.csv  mqtt_test.py  resize-images.lua
(+233 files in other folders)
