[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcifer-cli"
version = "0.1.0"
description = "LLM-friendly deployment and management tool for the Calcifer IoT platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "dmgiangi" }
]
keywords = ["cli", "deployment", "iot", "docker", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

# No runtime dependencies - uses only Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
calcifer = "calcifer_cli:main"

[project.urls]
Homepage = "https://github.com/dmgiangi/calcifer"
Repository = "https://github.com/dmgiangi/calcifer"
Issues = "https://github.com/dmgiangi/calcifer/issues"

[tool.hatch.build.targets.wheel]
packages = ["commands", "utils"]
include = ["calcifer-cli.py"]

[tool.hatch.build.targets.sdist]
include = [
    "calcifer-cli.py",
    "commands/",
    "utils/",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["commands", "utils"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

